--- a/pom.xml
+++ b/pom.xml
@@ -444,6 +444,8 @@
     </distributionManagement>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
