--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.pnoker</groupId>
-    <version>2022.1.2</version>
+    <version>2022.1.3</version>
 
     <name>${project.artifactId}</name>
     <artifactId>dc3-parent</artifactId>
@@ -112,6 +112,10 @@
             </properties>
         </profile>
     </profiles>
+
+    <modules>
+        <module>dc3-common</module>
+    </modules>
 
     <dependencies>
 
@@ -352,7 +356,25 @@
             </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-core</artifactId>
+                <artifactId>dc3-common-web</artifactId>
+                <version>${project.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-mysql</artifactId>
+                <version>${project.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-redis</artifactId>
+                <version>${project.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-thread</artifactId>
                 <version>${project.version}</version>
                 <scope>compile</scope>
             </dependency>
