--- a/dc3-common/dc3-common-feign/pom.xml
+++ b/dc3-common/dc3-common-feign/pom.xml
@@ -26,12 +26,12 @@
     </parent>
 
     <name>${project.artifactId}</name>
-    <artifactId>dc3-common-mysql</artifactId>
+    <artifactId>dc3-common-feign</artifactId>
     <packaging>jar</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
     <url>https://github.com/pnoker/iot-dc3</url>
-    <description>IOT DC3 平台 公共的 MySQL 配置。</description>
+    <description>IOT DC3 平台 公共的 OpenFeign 配置。</description>
 
     <developers>
         <developer>
@@ -58,20 +58,28 @@
 
     <dependencies>
 
-        <!-- Spring MySQL -->
+        <!-- Open Feign -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
-        <!-- Mybatis Plus -->
+        <!-- Feign OkHttp -->
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
+
+        <!-- Resilience4j -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+        </dependency>
+
+        <!-- Feign Jackson -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-jackson</artifactId>
         </dependency>
 
     </dependencies>
