--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.pnoker</groupId>
-    <version>2022.1.3</version>
-
-    <name>${project.artifactId}</name>
     <artifactId>dc3-parent</artifactId>
+    <name>${project.artifactId}</name>
+    <version>2022.1.4</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -342,18 +341,12 @@
             <!-- Dc3 Driver Sdk  -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-sdk</artifactId>
+                <artifactId>dc3-driver-sdk</artifactId>
                 <version>${project.version}</version>
                 <scope>compile</scope>
             </dependency>
 
             <!-- Dc3 Common -->
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-api</artifactId>
-                <version>${project.version}</version>
-                <scope>compile</scope>
-            </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-web</artifactId>
@@ -374,19 +367,25 @@
             </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-feign</artifactId>
+                <version>${project.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-thread</artifactId>
                 <version>${project.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-base</artifactId>
+                <artifactId>dc3-common-profiles</artifactId>
                 <version>${project.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-profiles</artifactId>
+                <artifactId>dc3-common-base</artifactId>
                 <version>${project.version}</version>
                 <scope>compile</scope>
             </dependency>
