--- a/dc3-common/dc3-common-profiles/pom.xml
+++ b/dc3-common/dc3-common-profiles/pom.xml
@@ -26,12 +26,12 @@
     </parent>
 
     <name>${project.artifactId}</name>
-    <artifactId>dc3-common-mysql</artifactId>
+    <artifactId>dc3-common-profiles</artifactId>
     <packaging>jar</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
     <url>https://github.com/pnoker/iot-dc3</url>
-    <description>IOT DC3 平台 公共的 MySQL 配置。</description>
+    <description>IOT DC3 平台 配置文件集合。</description>
 
     <developers>
         <developer>
@@ -58,20 +58,12 @@
 
     <dependencies>
 
-        <!-- Spring MySQL -->
+        <!-- Spring Configuration-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-        </dependency>
-
-        <!-- Mybatis Plus -->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
