--- a/dc3-common/dc3-common-log/pom.xml
+++ b/dc3-common/dc3-common-log/pom.xml
@@ -26,13 +26,13 @@
     </parent>
 
     <name>${project.artifactId}</name>
-    <artifactId>dc3-common-mysql</artifactId>
+    <artifactId>dc3-common-log</artifactId>
     <version>2022.1.7</version>
     <packaging>jar</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
     <url>https://github.com/pnoker/iot-dc3</url>
-    <description>IOT DC3 平台 公共的 MySQL 配置。</description>
+    <description>IOT DC3 平台 公共的 Log 配置。</description>
 
     <developers>
         <developer>
@@ -59,20 +59,16 @@
 
     <dependencies>
 
-        <!-- Spring MySQL -->
+        <!-- Spring Context -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
         </dependency>
 
-        <!-- Mybatis Plus -->
+        <!-- Aspectj Weaver -->
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
         </dependency>
 
     </dependencies>
