--- a/dc3-common/dc3-common-public/pom.xml
+++ b/dc3-common/dc3-common-public/pom.xml
@@ -26,13 +26,13 @@
     </parent>
 
     <name>${project.artifactId}</name>
-    <artifactId>dc3-common-mysql</artifactId>
+    <artifactId>dc3-common-public</artifactId>
     <version>2022.1.7</version>
     <packaging>jar</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
     <url>https://github.com/pnoker/iot-dc3</url>
-    <description>IOT DC3 平台 公共的 MySQL 配置。</description>
+    <description>IOT DC3 平台 公共配置。</description>
 
     <developers>
         <developer>
@@ -59,20 +59,30 @@
 
     <dependencies>
 
-        <!-- Spring MySQL -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-        </dependency>
-
-        <!-- Mybatis Plus -->
+        <!-- Mybatis Plus Core -->
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <artifactId>mybatis-plus-core</artifactId>
+        </dependency>
+
+        <!-- Jackson Core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <!-- Hutool -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
         </dependency>
 
     </dependencies>
