--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2022.1.6</version>
+    <version>2022.1.7</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -51,6 +51,10 @@
         <developerConnection>https://github.com/pnoker/iot-dc3.git</developerConnection>
     </scm>
 
+    <modules>
+        <module>dc3-common</module>
+    </modules>
+
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -58,6 +62,17 @@
         <!-- Spring 相关-->
         <spring-boot.version>2.7.6</spring-boot.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
+
+        <!-- DC3 Common 相关 -->
+        <dc3.common.web.version>2022.1.7</dc3.common.web.version>
+        <dc3.common.mysql.version>2022.1.7</dc3.common.mysql.version>
+        <dc3.common.redis.version>2022.1.7</dc3.common.redis.version>
+        <dc3.common.feign.version>2022.1.7</dc3.common.feign.version>
+        <dc3.common.thread.version>2022.1.7</dc3.common.thread.version>
+        <dc3.common.log.version>2022.1.7</dc3.common.log.version>
+        <dc3.common.public.version>2022.1.7</dc3.common.public.version>
+        <dc3.common.exception.version>2022.1.7</dc3.common.exception.version>
+        <dc3.common.profiles.version>2022.1.7</dc3.common.profiles.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -114,6 +129,12 @@
 
     <dependencies>
 
+        <!-- Slf4j Api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -156,8 +177,15 @@
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-core</artifactId>
+                <version>${mybatis.plus.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-extension</artifactId>
                 <version>${mybatis.plus.version}</version>
+                <scope>compile</scope>
             </dependency>
 
             <!-- Spring Data MongoDB -->
@@ -333,37 +361,55 @@
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-web</artifactId>
-                <version>${project.version}</version>
+                <version>${dc3.common.web.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-mysql</artifactId>
-                <version>${project.version}</version>
+                <version>${dc3.common.mysql.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-redis</artifactId>
-                <version>${project.version}</version>
+                <version>${dc3.common.redis.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-feign</artifactId>
-                <version>${project.version}</version>
+                <version>${dc3.common.feign.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-thread</artifactId>
-                <version>${project.version}</version>
+                <version>${dc3.common.thread.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-log</artifactId>
+                <version>${dc3.common.log.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-public</artifactId>
+                <version>${dc3.common.public.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-exception</artifactId>
+                <version>${dc3.common.exception.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-profiles</artifactId>
-                <version>${project.version}</version>
+                <version>${dc3.common.profiles.version}</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
