--- a/dc3-common/dc3-common-public/pom.xml
+++ b/dc3-common/dc3-common-public/pom.xml
@@ -100,6 +100,10 @@
             <groupId>io.github.pnoker</groupId>
             <artifactId>dc3-common-constant</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+        </dependency>
 
     </dependencies>
 
