--- a/dc3-common/pom.xml
+++ b/dc3-common/pom.xml
@@ -72,6 +72,12 @@
 
     <dependencies>
 
+        <!-- Hutool -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
