--- a/dc3-common/dc3-common-model/pom.xml
+++ b/dc3-common/dc3-common-model/pom.xml
@@ -65,7 +65,7 @@
             <artifactId>spring-data-mongodb</artifactId>
         </dependency>
 
-        <!-- Mybatis Plus -->
+        <!-- Mybatis Plus Extension -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-extension</artifactId>
@@ -77,7 +77,11 @@
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
 
-        <!-- Jackson Core -->
+        <!-- Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
@@ -86,21 +90,17 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+        <!-- DC3 Common Constant -->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
+            <groupId>io.github.pnoker</groupId>
+            <artifactId>dc3-common-constant</artifactId>
         </dependency>
 
         <!-- DC3 Common Exception -->
         <dependency>
             <groupId>io.github.pnoker</groupId>
             <artifactId>dc3-common-exception</artifactId>
-        </dependency>
-
-        <!-- DC3 Common Constant -->
-        <dependency>
-            <groupId>io.github.pnoker</groupId>
-            <artifactId>dc3-common-constant</artifactId>
         </dependency>
 
     </dependencies>
