--- a/dc3-common/dc3-common-redis/pom.xml
+++ b/dc3-common/dc3-common-redis/pom.xml
@@ -69,7 +69,7 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
-        <!-- Jackson Core -->
+        <!-- Jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
