--- a/pom.xml
+++ b/pom.xml
@@ -63,15 +63,20 @@
         <spring-boot.version>2.7.6</spring-boot.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
 
+        <!-- DC3 Driver 相关 -->
+        <dc3.driver.sdk.version>2022.1.7</dc3.driver.sdk.version>
+
         <!-- DC3 Common 相关 -->
         <dc3.common.web.version>2022.1.7</dc3.common.web.version>
+        <dc3.common.feign.version>2022.1.7</dc3.common.feign.version>
+        <dc3.common.log.version>2022.1.7</dc3.common.log.version>
         <dc3.common.mysql.version>2022.1.7</dc3.common.mysql.version>
         <dc3.common.redis.version>2022.1.7</dc3.common.redis.version>
-        <dc3.common.feign.version>2022.1.7</dc3.common.feign.version>
         <dc3.common.thread.version>2022.1.7</dc3.common.thread.version>
-        <dc3.common.log.version>2022.1.7</dc3.common.log.version>
-        <dc3.common.public.version>2022.1.7</dc3.common.public.version>
         <dc3.common.exception.version>2022.1.7</dc3.common.exception.version>
+        <dc3.common.public.version>2022.1.7</dc3.common.public.version>
+        <dc3.common.model.version>2022.1.7</dc3.common.model.version>
+        <dc3.common.constant.version>2022.1.7</dc3.common.constant.version>
         <dc3.common.profiles.version>2022.1.7</dc3.common.profiles.version>
 
         <!-- 其他依赖-->
@@ -262,7 +267,7 @@
                 <version>${modbus.version}</version>
             </dependency>
 
-            <!--Netty-->
+            <!-- Netty -->
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
@@ -323,105 +328,99 @@
                 <version>${hutool.version}</version>
             </dependency>
 
-            <!-- DC3 Api -->
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-api-auth</artifactId>
-                <version>${project.version}</version>
-                <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-api-manager</artifactId>
-                <version>${project.version}</version>
-                <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-api-data</artifactId>
-                <version>${project.version}</version>
-                <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-api-driver</artifactId>
-                <version>${project.version}</version>
-                <scope>compile</scope>
-            </dependency>
-
             <!-- DC3 Driver Sdk  -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-driver-sdk</artifactId>
-                <version>${project.version}</version>
+                <version>${dc3.driver.sdk.version}</version>
                 <scope>compile</scope>
             </dependency>
 
-            <!-- DC3 Common -->
+            <!-- DC3 Common Web -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-web</artifactId>
                 <version>${dc3.common.web.version}</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- DC3 Common MySQL -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-mysql</artifactId>
                 <version>${dc3.common.mysql.version}</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- DC3 Common Redis -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-redis</artifactId>
                 <version>${dc3.common.redis.version}</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- DC3 Common Feign -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-feign</artifactId>
                 <version>${dc3.common.feign.version}</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- DC3 Common Thread -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-thread</artifactId>
                 <version>${dc3.common.thread.version}</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- DC3 Common Log -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-log</artifactId>
                 <version>${dc3.common.log.version}</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- DC3 Common Public -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-public</artifactId>
                 <version>${dc3.common.public.version}</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- DC3 Common Exception -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-exception</artifactId>
                 <version>${dc3.common.exception.version}</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- DC3 Common Profiles -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-profiles</artifactId>
                 <version>${dc3.common.profiles.version}</version>
                 <scope>compile</scope>
             </dependency>
+
+            <!-- DC3 Common Model -->
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-model</artifactId>
+                <version>${dc3.common.model.version}</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <!-- DC3 Common Constant -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-constant</artifactId>
-                <version>${dc3.common.profiles.version}</version>
-                <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-driver-sdk</artifactId>
-                <version>${project.version}</version>
+                <version>${dc3.common.constant.version}</version>
                 <scope>compile</scope>
             </dependency>
         </dependencies>
