--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2022.1.8</version>
+    <version>2022.1.9</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -60,20 +60,20 @@
         <spring-cloud.version>2021.0.5</spring-cloud.version>
 
         <!-- DC3 Driver 相关 -->
-        <dc3.driver.sdk.version>2022.1.8</dc3.driver.sdk.version>
+        <dc3.driver.sdk.version>2022.1.9</dc3.driver.sdk.version>
 
         <!-- DC3 Common 相关 -->
-        <dc3.common.web.version>2022.1.8</dc3.common.web.version>
-        <dc3.common.feign.version>2022.1.8</dc3.common.feign.version>
-        <dc3.common.log.version>2022.1.8</dc3.common.log.version>
-        <dc3.common.mysql.version>2022.1.8</dc3.common.mysql.version>
-        <dc3.common.redis.version>2022.1.8</dc3.common.redis.version>
-        <dc3.common.thread.version>2022.1.8</dc3.common.thread.version>
-        <dc3.common.exception.version>2022.1.8</dc3.common.exception.version>
-        <dc3.common.public.version>2022.1.8</dc3.common.public.version>
-        <dc3.common.model.version>2022.1.8</dc3.common.model.version>
-        <dc3.common.constant.version>2022.1.8</dc3.common.constant.version>
-        <dc3.common.profiles.version>2022.1.8</dc3.common.profiles.version>
+        <dc3.common.web.version>2022.1.9</dc3.common.web.version>
+        <dc3.common.feign.version>2022.1.9</dc3.common.feign.version>
+        <dc3.common.log.version>2022.1.9</dc3.common.log.version>
+        <dc3.common.mysql.version>2022.1.9</dc3.common.mysql.version>
+        <dc3.common.redis.version>2022.1.9</dc3.common.redis.version>
+        <dc3.common.thread.version>2022.1.9</dc3.common.thread.version>
+        <dc3.common.exception.version>2022.1.9</dc3.common.exception.version>
+        <dc3.common.public.version>2022.1.9</dc3.common.public.version>
+        <dc3.common.model.version>2022.1.9</dc3.common.model.version>
+        <dc3.common.constant.version>2022.1.9</dc3.common.constant.version>
+        <dc3.common.profiles.version>2022.1.9</dc3.common.profiles.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -158,6 +158,12 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
+        </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
 
     </dependencies>
@@ -349,6 +355,7 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
                 <version>${mapstruct.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <!-- Lombok -->
@@ -356,6 +363,7 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <!-- Lombok MapStruct Binding -->
@@ -363,6 +371,7 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok-mapstruct-binding</artifactId>
                 <version>${lombok-mapstruct-binding.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <!-- Guava -->
@@ -372,7 +381,7 @@
                 <version>${guava.version}</version>
             </dependency>
 
-            <!-- Hutool -->
+            <!-- HuTool -->
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
