--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2022.2.2</version>
+    <version>2022.2.3</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -59,21 +59,25 @@
         <spring-boot.version>2.7.6</spring-boot.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
 
+        <!-- DC3 Center 相关 -->
+        <dc3.center.register.client.version>2022.2.3</dc3.center.register.client.version>
+
         <!-- DC3 Driver 相关 -->
-        <dc3.driver.sdk.version>2022.2.2</dc3.driver.sdk.version>
+        <dc3.driver.sdk.version>2022.2.3</dc3.driver.sdk.version>
 
         <!-- DC3 Common 相关 -->
-        <dc3.common.web.version>2022.2.2</dc3.common.web.version>
-        <dc3.common.feign.version>2022.2.2</dc3.common.feign.version>
-        <dc3.common.log.version>2022.2.2</dc3.common.log.version>
-        <dc3.common.mysql.version>2022.2.2</dc3.common.mysql.version>
-        <dc3.common.redis.version>2022.2.2</dc3.common.redis.version>
-        <dc3.common.thread.version>2022.2.2</dc3.common.thread.version>
-        <dc3.common.exception.version>2022.2.2</dc3.common.exception.version>
-        <dc3.common.public.version>2022.2.2</dc3.common.public.version>
-        <dc3.common.model.version>2022.2.2</dc3.common.model.version>
-        <dc3.common.constant.version>2022.2.2</dc3.common.constant.version>
-        <dc3.common.profiles.version>2022.2.2</dc3.common.profiles.version>
+        <dc3.common.version>2022.2.0</dc3.common.version>
+        <dc3.common.web.version>2022.2.3</dc3.common.web.version>
+        <dc3.common.feign.version>2022.2.3</dc3.common.feign.version>
+        <dc3.common.log.version>2022.2.3</dc3.common.log.version>
+        <dc3.common.mysql.version>2022.2.3</dc3.common.mysql.version>
+        <dc3.common.redis.version>2022.2.3</dc3.common.redis.version>
+        <dc3.common.thread.version>2022.2.3</dc3.common.thread.version>
+        <dc3.common.exception.version>2022.2.3</dc3.common.exception.version>
+        <dc3.common.public.version>2022.2.3</dc3.common.public.version>
+        <dc3.common.model.version>2022.2.3</dc3.common.model.version>
+        <dc3.common.constant.version>2022.2.3</dc3.common.constant.version>
+        <dc3.common.profiles.version>2022.2.3</dc3.common.profiles.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -388,11 +392,25 @@
                 <version>${hutool.version}</version>
             </dependency>
 
+            <!-- DC3 Center Register Client Starter -->
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-starter-center-register-client</artifactId>
+                <version>${dc3.center.register.client.version}</version>
+            </dependency>
+
             <!-- DC3 Driver Sdk  -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-driver-sdk</artifactId>
                 <version>${dc3.driver.sdk.version}</version>
+            </dependency>
+
+            <!-- DC3 Common -->
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common</artifactId>
+                <version>${dc3.common.version}</version>
             </dependency>
 
             <!-- DC3 Common Web -->
