--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.1.3</version>
+    <version>2023.1.4</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -63,30 +63,30 @@
         <dc3.center.register.client.version>2023.1.2</dc3.center.register.client.version>
 
         <!-- DC3 Driver 相关 -->
-        <dc3.driver.sdk.version>2023.1.3</dc3.driver.sdk.version>
+        <dc3.driver.sdk.version>2023.1.4</dc3.driver.sdk.version>
 
         <!-- DC3 Common 相关 -->
-        <dc3.common.version>2023.1.3</dc3.common.version>
-        <dc3.common.web.version>2023.1.3</dc3.common.web.version>
-        <dc3.common.feign.version>2023.1.3</dc3.common.feign.version>
-        <dc3.common.mysql.version>2023.1.3</dc3.common.mysql.version>
-        <dc3.common.redis.version>2023.1.3</dc3.common.redis.version>
-        <dc3.common.mongo.version>2023.1.3</dc3.common.mongo.version>
-        <dc3.common.rabbitmq.version>2023.1.3</dc3.common.rabbitmq.version>
-        <dc3.common.quartz.version>2023.1.3</dc3.common.quartz.version>
-        <dc3.common.thread.version>2023.1.3</dc3.common.thread.version>
-        <dc3.common.model.version>2023.1.3</dc3.common.model.version>
-        <dc3.common.public.version>2023.1.3</dc3.common.public.version>
-        <dc3.common.constant.version>2023.1.3</dc3.common.constant.version>
-        <dc3.common.exception.version>2023.1.3</dc3.common.exception.version>
-        <dc3.common.log.version>2023.1.3</dc3.common.log.version>
-        <dc3.common.api.version>2023.1.3</dc3.common.api.version>
+        <dc3.common.version>2023.1.4</dc3.common.version>
+        <dc3.common.web.version>2023.1.4</dc3.common.web.version>
+        <dc3.common.feign.version>2023.1.4</dc3.common.feign.version>
+        <dc3.common.mysql.version>2023.1.4</dc3.common.mysql.version>
+        <dc3.common.redis.version>2023.1.4</dc3.common.redis.version>
+        <dc3.common.mongo.version>2023.1.4</dc3.common.mongo.version>
+        <dc3.common.rabbitmq.version>2023.1.4</dc3.common.rabbitmq.version>
+        <dc3.common.quartz.version>2023.1.4</dc3.common.quartz.version>
+        <dc3.common.thread.version>2023.1.4</dc3.common.thread.version>
+        <dc3.common.model.version>2023.1.4</dc3.common.model.version>
+        <dc3.common.public.version>2023.1.4</dc3.common.public.version>
+        <dc3.common.constant.version>2023.1.4</dc3.common.constant.version>
+        <dc3.common.exception.version>2023.1.4</dc3.common.exception.version>
+        <dc3.common.log.version>2023.1.4</dc3.common.log.version>
+        <dc3.common.api.version>2023.1.4</dc3.common.api.version>
 
         <!-- DC3 Api 相关 -->
-        <dc3.api.version>2023.1.3</dc3.api.version>
-        <dc3.api.auth.version>2023.1.3</dc3.api.auth.version>
-        <dc3.api.data.version>2023.1.3</dc3.api.data.version>
-        <dc3.api.manager.version>2023.1.3</dc3.api.manager.version>
+        <dc3.api.version>2023.1.4</dc3.api.version>
+        <dc3.api.auth.version>2023.1.4</dc3.api.auth.version>
+        <dc3.api.data.version>2023.1.4</dc3.api.data.version>
+        <dc3.api.manager.version>2023.1.4</dc3.api.manager.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -808,6 +808,7 @@
                         </execution>
                     </executions>
                 </plugin>
+                <!--  Nexus Maven 插件 -->
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
                     <artifactId>nexus-staging-maven-plugin</artifactId>
