--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.2.1</version>
+    <version>2023.2.2</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -64,37 +64,36 @@
         <dc3.center.register.nacos.client.version>2023.1.9</dc3.center.register.nacos.client.version>
 
         <!-- DC3 Driver 相关 -->
-        <dc3.driver.sdk.version>2023.2.1</dc3.driver.sdk.version>
+        <dc3.driver.sdk.version>2023.2.2</dc3.driver.sdk.version>
 
         <!-- DC3 Common 相关 -->
-        <dc3.common.version>2023.2.1</dc3.common.version>
-        <dc3.common.web.version>2023.2.1</dc3.common.web.version>
-        <dc3.common.feign.version>2023.2.1</dc3.common.feign.version>
-        <dc3.common.mysql.version>2023.2.1</dc3.common.mysql.version>
-        <dc3.common.redis.version>2023.2.1</dc3.common.redis.version>
-        <dc3.common.mongo.version>2023.2.1</dc3.common.mongo.version>
-        <dc3.common.rabbitmq.version>2023.2.1</dc3.common.rabbitmq.version>
-        <dc3.common.mqtt.version>2023.2.1</dc3.common.mqtt.version>
-        <dc3.common.quartz.version>2023.2.1</dc3.common.quartz.version>
-        <dc3.common.thread.version>2023.2.1</dc3.common.thread.version>
-        <dc3.common.model.version>2023.2.1</dc3.common.model.version>
-        <dc3.common.public.version>2023.2.1</dc3.common.public.version>
-        <dc3.common.constant.version>2023.2.1</dc3.common.constant.version>
-        <dc3.common.exception.version>2023.2.1</dc3.common.exception.version>
-        <dc3.common.log.version>2023.2.1</dc3.common.log.version>
-        <dc3.common.api.version>2023.2.1</dc3.common.api.version>
+        <dc3.common.version>2023.2.2</dc3.common.version>
+        <dc3.common.web.version>2023.2.2</dc3.common.web.version>
+        <dc3.common.feign.version>2023.2.2</dc3.common.feign.version>
+        <dc3.common.mysql.version>2023.2.2</dc3.common.mysql.version>
+        <dc3.common.redis.version>2023.2.2</dc3.common.redis.version>
+        <dc3.common.mongo.version>2023.2.2</dc3.common.mongo.version>
+        <dc3.common.rabbitmq.version>2023.2.2</dc3.common.rabbitmq.version>
+        <dc3.common.mqtt.version>2023.2.2</dc3.common.mqtt.version>
+        <dc3.common.quartz.version>2023.2.2</dc3.common.quartz.version>
+        <dc3.common.thread.version>2023.2.2</dc3.common.thread.version>
+        <dc3.common.model.version>2023.2.2</dc3.common.model.version>
+        <dc3.common.public.version>2023.2.2</dc3.common.public.version>
+        <dc3.common.constant.version>2023.2.2</dc3.common.constant.version>
+        <dc3.common.exception.version>2023.2.2</dc3.common.exception.version>
+        <dc3.common.log.version>2023.2.2</dc3.common.log.version>
+        <dc3.common.api.version>2023.2.2</dc3.common.api.version>
 
         <!-- DC3 Api 相关 -->
-        <dc3.api.version>2023.2.1</dc3.api.version>
-        <dc3.api.auth.version>2023.2.1</dc3.api.auth.version>
-        <dc3.api.data.version>2023.2.1</dc3.api.data.version>
-        <dc3.api.manager.version>2023.2.1</dc3.api.manager.version>
+        <dc3.api.version>2023.2.2</dc3.api.version>
+        <dc3.api.auth.version>2023.2.2</dc3.api.auth.version>
+        <dc3.api.data.version>2023.2.2</dc3.api.data.version>
+        <dc3.api.manager.version>2023.2.2</dc3.api.manager.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
         <spring-data-mongodb.version>3.4.10</spring-data-mongodb.version>
         <spring.cloud.nacos.version>2021.0.4.0</spring.cloud.nacos.version>
-        <hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
         <commons-fileupload.version>1.4</commons-fileupload.version>
         <mybatis.plus.version>3.5.3.1</mybatis.plus.version>
         <jackson.version>2.14.2</jackson.version>
@@ -121,6 +120,9 @@
         <lombok.version>1.18.26</lombok.version>
         <guava.version>31.1-jre</guava.version>
         <hutool.version>5.8.15</hutool.version>
+
+        <!-- 特殊版本 -->
+        <hibernate.validator.version>6.2.5.Final</hibernate.validator.version>
 
         <!-- Plugin 相关 -->
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
